feat(server): configure server api port
